--- a/pages/kindergarten-page.html
+++ b/pages/kindergarten-page.html
@@ -890,6 +890,270 @@
                     </div>
                 </div>
             </div>
+
+            <section class="daily-schedule --sectionPadding">
+                <div class="my-container daily-schedule__container">
+                    <div class="block-title daily-schedule__title">Режим дня</div>
+                    <div class="daily-schedule__body">
+                        <div class="daily-schedule__items">
+                            <div class="daily-schedule__item">
+                                <div class="daily-schedule__item-bg-image-wrap">
+                                    <img src="../assets/images/pages/kindergarten-page/daily-schedule/morning-icon.svg" alt="" class="daily-schedule__item-bg-img">
+                                </div>
+                                <div class="daily-schedule__times">
+                                    <div class="daily-schedule__time-item">
+                                        <div class="daily-schedule__time-parts">
+                                            <div class="daily-schedule__time-parts">
+                                                <div class="daily-schedule__time-start">
+                                                    8.00
+                                                </div>
+                                                <div class="daily-schedule__time-divider"></div>
+                                                <div class="daily-schedule__time-end">
+                                                    8.45
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="daily-schedule__time-text">приход детей</div>
+                                    </div>
+                                    <div class="daily-schedule__time-item">
+                                        <div class="daily-schedule__time-parts">
+                                            <div class="daily-schedule__time-parts">
+                                                <div class="daily-schedule__time-start">
+                                                    8.45 
+                                                </div>
+                                                <div class="daily-schedule__time-divider"></div>
+                                                <div class="daily-schedule__time-end">
+                                                    9.00
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="daily-schedule__time-text">зарядка</div>
+                                    </div>
+                                    <div class="daily-schedule__time-item">
+                                        <div class="daily-schedule__time-parts">
+                                            <div class="daily-schedule__time-parts">
+                                                <div class="daily-schedule__time-start">
+                                                    9.00 
+                                                </div>
+                                                <div class="daily-schedule__time-divider"></div>
+                                                <div class="daily-schedule__time-end">
+                                                    9.15
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="daily-schedule__time-text">завтрак</div>
+                                    </div>
+                                    <div class="daily-schedule__time-item">
+                                        <div class="daily-schedule__time-parts">
+                                            <div class="daily-schedule__time-parts">
+                                                <div class="daily-schedule__time-start">
+                                                    9.15 
+                                                </div>
+                                                <div class="daily-schedule__time-divider"></div>
+                                                <div class="daily-schedule__time-end">
+                                                    9.30
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="daily-schedule__time-text">детский совет</div>
+                                    </div>
+                                    <div class="daily-schedule__time-item">
+                                        <div class="daily-schedule__time-parts">
+                                            <div class="daily-schedule__time-parts">
+                                                <div class="daily-schedule__time-start">
+                                                    9.30 
+                                                </div>
+                                                <div class="daily-schedule__time-divider"></div>
+                                                <div class="daily-schedule__time-end">
+                                                    10.30
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="daily-schedule__time-text">проектная деятельность/дополнительное образование</div>
+                                    </div>
+                                </div>
+                                <div class="daily-schedule__video-poster-wrap --video-poster">
+                                    <img src="../assets/images/no-photo.png" alt="" class="daily-schedule__video-poster-img">
+                                </div>
+                            </div>
+                            <div class="daily-schedule__item">
+                                <div class="daily-schedule__item-bg-image-wrap">
+                                    <img src="../assets/images/pages/kindergarten-page/daily-schedule/day-icon.svg" alt="" class="daily-schedule__item-bg-img">
+                                </div>
+                                <div class="daily-schedule__times">
+                                    <div class="daily-schedule__time-item">
+                                        <div class="daily-schedule__time-parts">
+                                            <div class="daily-schedule__time-parts">
+                                                <div class="daily-schedule__time-start">
+                                                    10.30
+                                                </div>
+                                                <div class="daily-schedule__time-divider"></div>
+                                                <div class="daily-schedule__time-end">
+                                                    10.40
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="daily-schedule__time-text">второй завтрак</div>
+                                    </div>
+                                    <div class="daily-schedule__time-item">
+                                        <div class="daily-schedule__time-parts">
+                                            <div class="daily-schedule__time-parts">
+                                                <div class="daily-schedule__time-start">
+                                                    10.40 
+                                                </div>
+                                                <div class="daily-schedule__time-divider"></div>
+                                                <div class="daily-schedule__time-end">
+                                                    12.00
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="daily-schedule__time-text">прогулка</div>
+                                    </div>
+                                    <div class="daily-schedule__time-item">
+                                        <div class="daily-schedule__time-parts">
+                                            <div class="daily-schedule__time-parts">
+                                                <div class="daily-schedule__time-start">
+                                                    12.00
+                                                </div>
+                                                <div class="daily-schedule__time-divider"></div>
+                                                <div class="daily-schedule__time-end">
+                                                    12.30
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="daily-schedule__time-text">обед</div>
+                                    </div>
+                                    <div class="daily-schedule__time-item">
+                                        <div class="daily-schedule__time-parts">
+                                            <div class="daily-schedule__time-parts">
+                                                <div class="daily-schedule__time-start">
+                                                    12.30 
+                                                </div>
+                                                <div class="daily-schedule__time-divider"></div>
+                                                <div class="daily-schedule__time-end">
+                                                    13.00
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="daily-schedule__time-text">подготовка ко сну, чтение&nbsp;художественной литературы</div>
+                                    </div>
+                                    <div class="daily-schedule__time-item">
+                                        <div class="daily-schedule__time-parts">
+                                            <div class="daily-schedule__time-parts">
+                                                <div class="daily-schedule__time-start">
+                                                    13.00 
+                                                </div>
+                                                <div class="daily-schedule__time-divider"></div>
+                                                <div class="daily-schedule__time-end">
+                                                    15.00
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="daily-schedule__time-text">сон-час</div>
+                                    </div>
+                                    <div class="daily-schedule__time-item">
+                                        <div class="daily-schedule__time-parts">
+                                            <div class="daily-schedule__time-parts">
+                                                <div class="daily-schedule__time-start">
+                                                    15.00 
+                                                </div>
+                                                <div class="daily-schedule__time-divider"></div>
+                                                <div class="daily-schedule__time-end">
+                                                    15.15
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="daily-schedule__time-text">подъем, закаливающие процедуры</div>
+                                    </div>
+                                </div>
+                                <div class="daily-schedule__video-poster-wrap --video-poster">
+                                    <img src="../assets/images/no-photo.png" alt="" class="daily-schedule__video-poster-img">
+                                </div>
+                            </div>
+                            <div class="daily-schedule__item">
+                                <div class="daily-schedule__item-bg-image-wrap">
+                                    <img src="../assets/images/pages/kindergarten-page/daily-schedule/evening-icon.svg" alt="" class="daily-schedule__item-bg-img">
+                                </div>
+                                <div class="daily-schedule__times">
+                                    <div class="daily-schedule__time-item">
+                                        <div class="daily-schedule__time-parts">
+                                            <div class="daily-schedule__time-parts">
+                                                <div class="daily-schedule__time-start">
+                                                    15.15
+                                                </div>
+                                                <div class="daily-schedule__time-divider"></div>
+                                                <div class="daily-schedule__time-end">
+                                                    15.30
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="daily-schedule__time-text">полдник</div>
+                                    </div>
+                                    <div class="daily-schedule__time-item">
+                                        <div class="daily-schedule__time-parts">
+                                            <div class="daily-schedule__time-parts">
+                                                <div class="daily-schedule__time-start">
+                                                    15.30 
+                                                </div>
+                                                <div class="daily-schedule__time-divider"></div>
+                                                <div class="daily-schedule__time-end">
+                                                    17.20
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="daily-schedule__time-text">проектная деятельность/дополнительное образование/прогулка</div>
+                                    </div>
+                                    <div class="daily-schedule__time-item">
+                                        <div class="daily-schedule__time-parts">
+                                            <div class="daily-schedule__time-parts">
+                                                <div class="daily-schedule__time-start">
+                                                    17.20 
+                                                </div>
+                                                <div class="daily-schedule__time-divider"></div>
+                                                <div class="daily-schedule__time-end">
+                                                    17.40
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="daily-schedule__time-text">ужин</div>
+                                    </div>
+                                    <div class="daily-schedule__time-item">
+                                        <div class="daily-schedule__time-parts">
+                                            <div class="daily-schedule__time-parts">
+                                                <div class="daily-schedule__time-start">
+                                                    17.40 
+                                                </div>
+                                                <div class="daily-schedule__time-divider"></div>
+                                                <div class="daily-schedule__time-end">
+                                                    18.45
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="daily-schedule__time-text">свободная деятельность/прогулка</div>
+                                    </div>
+                                    <div class="daily-schedule__time-item">
+                                        <div class="daily-schedule__time-parts">
+                                            <div class="daily-schedule__time-parts">
+                                                <div class="daily-schedule__time-start">
+                                                    18.45
+                                                </div>
+                                                <div class="daily-schedule__time-divider"></div>
+                                                <div class="daily-schedule__time-end">
+                                                    19.00
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="daily-schedule__time-text">уход детей домой</div>
+                                    </div>
+                                </div>
+                                <div class="daily-schedule__video-poster-wrap --video-poster">
+                                    <img src="../assets/images/no-photo.png" alt="" class="daily-schedule__video-poster-img">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             
             <div class="lifestyle main__lifestyle">
                 <div class="lifestyle__items">
