--- a/pages/news-page.html
+++ b/pages/news-page.html
@@ -367,6 +367,27 @@
                     class="hero-section__background-img">
             </section>
 
+            <section class="images">
+                <div class="my-container images__container">
+                    <div class="images__content">
+                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
+                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
+                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
+                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
+                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
+                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
+                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
+                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
+                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
+                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
+                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
+                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
+                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
+                        <div class="images__item"><img src="../assets/images/no-photo.png" alt="" class="images__item-img"></div>
+                    </div>
+                </div>
+            </section>
+
             <!-- ВЫНЕС ОФОРМЛЕНИЕ ОТДЕЛЬНО (МОЖНО ВНЕСТИ БЛОК В LAYOUT) -->
             <section class="contacts main__contacts --sectionPadding">
                 <div class="my-container contacts__container">
