--- a/pages/news.html
+++ b/pages/news.html
@@ -363,7 +363,8 @@
                     <div class="news-list__items">
                         <div class="news-list__item-wrapper">
                             <div class="news-list__item-top">
-                                <a href="" class="news-list__item --big-item --video-poster">
+                                <div href="" class="news-list__item --big-item --video-poster">
+                                    <a href="./news-page.html" class="news-list__item-inner">
                                     <img src="../assets/images/pages/news/news-list/news-list-img-1.jpg" alt=""
                                         class="news-list__item-img">
                                     <div class="news-list__item-content">
@@ -374,13 +375,14 @@
                                                 <div class="news-list__item-text-title">Выпускной-2024</div>
                                                 <div class="news-list__item-text">Наборный текст</div>
                                             </div>
-                                            <a href=""
-                                                class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
-                                                новость</a>
+                                            <div class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
+                                                новость</div>
                                         </div>
                                     </div>
-                                </a>
-                                <a href="" class="news-list__item --small-item">
+                                    </a>
+                                </div>
+                                <div href="" class="news-list__item --small-item">
+                                    <a href="./news-page.html" class="news-list__item-inner">
                                     <img src="../assets/images/pages/news/news-list/news-list-img-2.jpg" alt=""
                                         class="news-list__item-img">
                                     <div class="news-list__item-content">
@@ -391,13 +393,14 @@
                                                 <div class="news-list__item-text-title">Выпускной-2024</div>
                                                 <div class="news-list__item-text">Наборный текст</div>
                                             </div>
-                                            <a href=""
-                                                class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
-                                                новость</a>
+                                            <div class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
+                                                новость</div>
                                         </div>
                                     </div>
-                                </a>
-                                <a href="" class="news-list__item --small-item">
+                                    </a>
+                                </div>
+                                <div href="" class="news-list__item --small-item">
+                                    <a href="./news-page.html" class="news-list__item-inner">
                                     <img src="../assets/images/pages/news/news-list/news-list-img-3.jpg" alt=""
                                         class="news-list__item-img">
                                     <div class="news-list__item-content">
@@ -408,15 +411,16 @@
                                                 <div class="news-list__item-text-title">Выпускной-2024</div>
                                                 <div class="news-list__item-text">Наборный текст</div>
                                             </div>
-                                            <a href=""
-                                                class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
-                                                новость</a>
+                                            <div class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
+                                                новость</div>
                                         </div>
                                     </div>
-                                </a>
+                                    </a>
+                                </div>
                             </div>
                             <div class="news-list__item-bottom">
-                                <a href="" class="news-list__item --bottom-item">
+                                <div href="" class="news-list__item --bottom-item">
+                                    <a href="./news-page.html" class="news-list__item-inner">
                                     <img src="../assets/images/pages/news/news-list/news-list-img-4.jpg" alt=""
                                         class="news-list__item-img">
                                     <div class="news-list__item-content">
@@ -427,13 +431,14 @@
                                                 <div class="news-list__item-text-title">Выпускной-2024</div>
                                                 <div class="news-list__item-text">Наборный текст</div>
                                             </div>
-                                            <a href=""
-                                                class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
-                                                новость</a>
+                                            <div class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
+                                                новость</div>
                                         </div>
                                     </div>
-                                </a>
-                                <a href="" class="news-list__item --bottom-item">
+                                    </a>
+                                </div>
+                                <div href="" class="news-list__item --bottom-item">
+                                    <a href="./news-page.html" class="news-list__item-inner">
                                     <img src="../assets/images/pages/news/news-list/news-list-img-5.jpg" alt=""
                                         class="news-list__item-img">
                                     <div class="news-list__item-content">
@@ -444,13 +449,14 @@
                                                 <div class="news-list__item-text-title">Выпускной-2024</div>
                                                 <div class="news-list__item-text">Наборный текст</div>
                                             </div>
-                                            <a href=""
-                                                class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
-                                                новость</a>
+                                            <div class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
+                                                новость</div>
                                         </div>
                                     </div>
-                                </a>
-                                <a href="" class="news-list__item --bottom-item">
+                                    </a>
+                                </div>
+                                <div href="" class="news-list__item --bottom-item">
+                                    <a href="./news-page.html" class="news-list__item-inner">
                                     <img src="../assets/images/pages/news/news-list/news-list-img-6.jpg" alt=""
                                         class="news-list__item-img">
                                     <div class="news-list__item-content">
@@ -461,12 +467,12 @@
                                                 <div class="news-list__item-text-title">Выпускной-2024</div>
                                                 <div class="news-list__item-text">Наборный текст</div>
                                             </div>
-                                            <a href=""
-                                                class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
-                                                новость</a>
+                                            <div class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
+                                                новость</div>
                                         </div>
                                     </div>
-                                </a>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         <div class="news-list__item-wrapper">
@@ -499,9 +505,8 @@
                                                 <div class="news-list__item-text-title">Выпускной-2024</div>
                                                 <div class="news-list__item-text">Наборный текст</div>
                                             </div>
-                                            <a href=""
-                                                class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
-                                                новость</a>
+                                            <div class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
+                                                новость</div>
                                         </div>
                                     </div>
                                 </div>
@@ -516,9 +521,8 @@
                                                 <div class="news-list__item-text-title">Выпускной-2024</div>
                                                 <div class="news-list__item-text">Наборный текст</div>
                                             </div>
-                                            <a href=""
-                                                class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
-                                                новость</a>
+                                            <div class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
+                                                новость</div>
                                         </div>
                                     </div>
                                 </div>
